--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Builds/CalendarDayEvent.apk"
+export_path="Builds/CalendarApp.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -27,7 +27,7 @@ architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
 version/code=1
-version/name="0.0.0.3"
+version/name="0.0.4"
 package/unique_name="com.Tshadow.Calendar"
 package/name="Calendar"
 package/signed=true
